2007-05-25  Matthew Barnes  <mbarnes@redhat.com>

	* gui/contact-editor/e-contact-editor.c (show_help_cb):
	Call gnome_help_display() instead of gnome_help_display_desktop(),
	and remove BASE_VERSION from the filename.  (#386503)

2007-04-09  simon.zheng  <simon.zheng@sun.com>

        ** Fix for bug #426487

        * gui/widgets/eab-contact-display.c: (accum_time_attribute):
        strftime() supplied by OS is subject to locale encoding, i.e.
        ja_JP.PCK. Using g_date_strftime() instead, which works on a
        UTF-8 format string and store a UTF-8 result.

2007-04-09  simon.zheng  <simon.zheng@sun.com>

        ** Fix for bug #426829.

        * gui/contact-editor/eab-editor.c: (eab_editor_confirm_delete):
        * gui/widgets/eab-contact-display.c: (render_contact):
        To avoid printing a NULL char point, add statements to
        check the return result of et_email_location() and e_contact_get().

2007-04-05  Matthew Barnes  <mbarnes@redhat.com>

	* gui/component/addressbook-config.c (addressbook_config_edit_source):
	Call gettext() on the EConfigItem labels.  (#406933)
	Patch from Jeff Cai.

2007-03-01  Tor Lillqvist  <tml@novell.com>

	* gui/widgets/e-addressbook-view.c (e_contact_print_button):
	* printing/e-contact-print.c (e_contact_print_response): 
	Bypass the body of these functions on non-G_OS_UNIX for now as
	they use gtk_print_unix_dialog_get_settings(). Gtk printing on
	Win32 needs work.

2007-02-26  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #232065

	* gui/widgets/e-addressbook-view.c: (eab_view_delete_selection): Fix
	for selection jump on delete from Ebby Wiselyn.

2007-02-12  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/contact-editor/contact-editor.glade: Fix critical warnings
	from typos in the glade file. Closes bug #397893. Patch
	from Wang Xin.

2007-02-12  Srinivasa Ragavan  <sragavan@novell.com>

	** Print migration updates from Ebby Wiselyn.
